# SE4HPC1-Guffanti-Gentile-Carra

./: CMakeLists.txt  README.md  build.sh
test/: structural.cpp  test_algebraic.cpp  test_algebraic.hpp  test_combinatorial.cpp  test_combinatorial.hpp  test_iterated.cpp  test_monkey.cpp  test_monkey.hpp  test_structural.cpp  test_structural.hpp
